[gd_scene load_steps=8 format=3 uid="uid://uvjc6oyn6dr0"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_057o0"]
[ext_resource type="Script" path="res://scripts/player_modules/input_module.gd" id="3_byxxy"]
[ext_resource type="Script" path="res://scripts/player_modules/run_module.gd" id="4_gdhfx"]
[ext_resource type="Script" path="res://scripts/player_modules/jump_module.gd" id="5_262f3"]
[ext_resource type="Script" path="res://scripts/player_modules/gravity_module.gd" id="5_t6ono"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_14iq8"]
radius = 32.0
height = 128.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q6icd"]
radius = 32.0
height = 128.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("input", "run", "jump", "gravity")]
script = ExtResource("1_057o0")
input = NodePath("InputModule")
run = NodePath("RunModule")
jump = NodePath("JumpModule")
gravity = NodePath("GravityModule")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
mesh = SubResource("CapsuleMesh_14iq8")

[node name="AnimationModule" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationModule"]

[node name="InputModule" type="Node" parent="."]
script = ExtResource("3_byxxy")

[node name="RunModule" type="Node" parent="."]
script = ExtResource("4_gdhfx")
SPEED = 800.0
ACCELERATION = 15.0
DECELERATION = 30.0
AIR_ACCELERATION = 10.0
AIR_DECELERATION = 5.0

[node name="JumpModule" type="Node" parent="."]
script = ExtResource("5_262f3")
JUMP_FORCE = 1500.0

[node name="GravityModule" type="Node" parent="."]
script = ExtResource("5_t6ono")
GRAVITY = 5000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_q6icd")
